; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-main.c_open_browser.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-main.c_open_browser.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PATH_MAX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"file://\00", align 1
@filename = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"file://%s/%s/%s\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"BROWSER\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"xdg-open\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [18 x i8] c"cannot exec '%s'\0A\00", align 1
@SW_SHOWNORMAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @open_browser to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @open_browser(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %9 = load i32, i32* @PATH_MAX, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %3, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %4, align 8
  %13 = load i8*, i8** %2, align 8
  %14 = call i32 @strncmp(i8* %13, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 7)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %42, label %16

16:                                               ; preds = %1
  %17 = load i8*, i8** %2, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 7
  %19 = load i8, i8* %18, align 1
  %20 = sext i8 %19 to i32
  %21 = icmp ne i32 %20, 47
  br i1 %21, label %22, label %42

22:                                               ; preds = %16
  %23 = load i32, i32* @PATH_MAX, align 4
  %24 = zext i32 %23 to i64
  %25 = call i8* @llvm.stacksave()
  store i8* %25, i8** %5, align 8
  %26 = alloca i8, i64 %24, align 16
  store i64 %24, i64* %6, align 8
  %27 = load i32, i32* @PATH_MAX, align 4
  %28 = zext i32 %27 to i64
  %29 = alloca i8, i64 %28, align 16
  store i64 %28, i64* %7, align 8
  %30 = load i32, i32* @filename, align 4
  %31 = trunc i64 %24 to i32
  %32 = call i32 @fz_dirname(i8* %26, i32 %30, i32 %31)
  %33 = trunc i64 %28 to i32
  %34 = call i32 @getcwd(i8* %29, i32 %33)
  %35 = trunc i64 %10 to i32
  %36 = load i8*, i8** %2, align 8
  %37 = getelementptr inbounds i8, i8* %36, i64 7
  %38 = call i32 @fz_snprintf(i8* %12, i32 %35, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8* %29, i8* %26, i8* %37)
  %39 = getelementptr inbounds i8, i8* %12, i64 7
  %40 = call i32 @fz_cleanname(i8* %39)
  store i8* %12, i8** %2, align 8
  %41 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %41)
  br label %42

42:                                               ; preds = %22, %16, %1
  %43 = call i8* @getenv(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  store i8* %43, i8** %8, align 8
  %44 = load i8*, i8** %8, align 8
  %45 = icmp ne i8* %44, null
  br i1 %45, label %47, label %46

46:                                               ; preds = %42
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i8** %8, align 8
  br label %47

47:                                               ; preds = %46, %42
  %48 = call i64 (...) @fork()
  %49 = icmp eq i64 %48, 0
  br i1 %49, label %50, label %59

50:                                               ; preds = %47
  %51 = load i8*, i8** %8, align 8
  %52 = load i8*, i8** %8, align 8
  %53 = load i8*, i8** %2, align 8
  %54 = call i32 @execlp(i8* %51, i8* %52, i8* %53, i8* null)
  %55 = load i32, i32* @stderr, align 4
  %56 = load i8*, i8** %8, align 8
  %57 = call i32 @fprintf(i32 %55, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.4, i64 0, i64 0), i8* %56)
  %58 = call i32 @exit(i32 0) #4
  unreachable

59:                                               ; preds = %47
  %60 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %60)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @strncmp(i8*, i8*, i32) #2

declare dso_local i32 @fz_dirname(i8*, i32, i32) #2

declare dso_local i32 @getcwd(i8*, i32) #2

declare dso_local i32 @fz_snprintf(i8*, i32, i8*, i8*, i8*, i8*) #2

declare dso_local i32 @fz_cleanname(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1

declare dso_local i8* @getenv(i8*) #2

declare dso_local i64 @fork(...) #2

declare dso_local i32 @execlp(i8*, i8*, i8*, i8*) #2

declare dso_local i32 @fprintf(i32, i8*, i8*) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
